--- a/public/ststic/note/css/note.css
+++ b/public/ststic/note/css/note.css
@@ -16,6 +16,7 @@
 	width:20em;
 	padding:1em;
 	position: relative;
+	height: 185px;
 	/* -moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
 	-webkit-box-shadow:5px 5px 7px rgba(33,33,33,7);
 	box-shadow:5px 5px 7px rgba(33,33,33,7);
@@ -27,6 +28,12 @@
 	 -o-transition:-o-transform .15s linear;
 	    -webkit-transition:-webkit-transform .15s linear; */
 	
+}
+
+
+.note ul li .note-des{
+	height: 140px;
+	overflow: hidden;
 }
 
 .note ul li a:hover{
@@ -48,6 +55,7 @@
 	float: right;
 	cursor: pointer;
 }
+
 
 .note ul li p{
 	font-size:110%;
