--- a/appliaction/admin/view/content/article_edit/edit_1.html
+++ b/appliaction/admin/view/content/article_edit/edit_1.html
@@ -15,6 +15,7 @@
 				<input type="hidden" value="{??$data['model_id']}" name="model_id">	
 				<div class="panel-body">
 					<fieldset>
+					
 						<div class="form-group">
 							<label class="control-label col-sm-3">
 								<span class="text-danger">*</span>
@@ -28,6 +29,7 @@
 								</select>
 							</div>
 						</div>
+
 						<div class="form-group">
 							<label class="control-label col-sm-3">
 								<span class="text-danger">*</span>
@@ -37,6 +39,30 @@
 								<input type="text" value="{??$data['title']}" name="title" placeholder="标题"  required class="form-control">	
 							</div>
 						</div>
+
+						{if in_array('en',$this->lg)}
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger">*</span>
+								<span>英文标题</span>
+							</label>
+							<div class="col-sm-8">
+								<input type="text" value="{??$data['title_en']}" name="title_en" placeholder="英文标题"  required class="form-control">	
+							</div>
+						</div>
+						{/if}
+
+						{if in_array('jp',$this->lg)}
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger">*</span>
+								<span>日文标题</span>
+							</label>
+							<div class="col-sm-8">
+								<input type="text" value="{??$data['title_jp']}" name="title_jp" placeholder="日文标题"  required class="form-control">	
+							</div>
+						</div>
+						{/if}
 						<div class="form-group">
 							<label class="control-label col-sm-3">
 								<span class="text-danger">*</span>
@@ -53,6 +79,17 @@
 							</label>
 							<div class="col-sm-8">
 								<a class="btn btn-primary btn-ablum" data-name="thumb" data-value='{??$data['thumb']}' data-path="article" data-max="1">添加图片</a>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger">*</span>
+								<span>视频</span>
+							</label>
+							<div class="col-sm-1">
+								<a class="btn btn-primary btn-files" data-name="video" data-value='{??$data['video']}' data-path="article" data-max="1">上传视频</a>
+							</div>
+							<div class="col-sm-8">
 							</div>
 						</div>
 						<div class="form-group">
@@ -82,15 +119,31 @@
 								<textarea name="description" placeholder="输入摘要内容" class="form-control">{??$data['description']}</textarea>
 							</div>
 						</div>
+						
+						{if in_array('en',$this->lg)}
 						<div class="form-group">
 							<label class="control-label col-sm-3">
 								<span class="text-danger">*</span>
-								<span>摘要英文</span>
+								<span>英文摘要</span>
 							</label>
 							<div class="col-sm-8">
 								<textarea name="description_en" placeholder="输入摘要内容" class="form-control">{??$data['description_en']}</textarea>
 							</div>
 						</div>
+						{/if}
+
+						{if in_array('jp',$this->lg)}
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger">*</span>
+								<span>日文摘要</span>
+							</label>
+							<div class="col-sm-8">
+								<textarea name="description_jp" placeholder="输入摘要内容" class="form-control">{??$data['description_jp']}</textarea>
+							</div>
+						</div>
+						{/if}
+
 						<div class="form-group">
 							<label class="control-label col-sm-3">
 								<span class="text-danger">*</span>
@@ -102,6 +155,8 @@
 							 	</script>
 							</div>
 						</div>
+
+						{if in_array('en',$this->lg)}
 						<div class="form-group">
 							<label class="control-label col-sm-3">
 								<span class="text-danger">*</span>
@@ -113,6 +168,22 @@
 							 	</script>
 							</div>
 						</div>
+						{/if}
+
+						{if in_array('jp',$this->lg)}
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger">*</span>
+								<span>日文内容</span>
+							</label>
+							<div class="col-sm-8">
+							 	<script id="content_jp" name="content_jp" type="text/plain" class="ue-editor">
+							 	{??$data['content_en']}
+							 	</script>
+							</div>
+						</div>
+						{/if}
+
 						<div class="form-group radio" data-radio="{??$data['is_recommend']}">
 							<label class="control-label col-sm-3">推荐排行榜：</label>
 							<div class="radio-inline">
