--- a/appliaction/undies/web/view/news/lists.html
+++ b/appliaction/undies/web/view/news/lists.html
@@ -31,7 +31,11 @@
             {loop $data['list'] $value}
             <li>
                 <h3><a href="{F:url('/about/detail',array('id'=>$value['id']))}">{$value['title']}</a></h3>
-                <img src="{$value['thumb']}">
+                {if $value['video']}
+                    <video src="{$value['video']}"  poster="{$value['thumb']}" controls="controls" style="width: 100%; max-height: 250px;"></video>
+                {else}
+                    <img src="{$value['thumb']}">
+                {/if}
                 <p>{$value['description']}</p>
                 <ul>
                     <li>{F:date('Y-m-d',$value['created'])}</li>
