--- a/appliaction/admin/view/content/category/lists.html
+++ b/appliaction/admin/view/content/category/lists.html
@@ -20,18 +20,24 @@
 							<a class="btn btn-primary btn-open" config-href="{F:url('edit',array('parentid'=>$parentid))}"  config-height="500px" config-width="60%">添加分类</a>
 							
 							
-							<a class="btn btn-primary btn-files-none" config-name="xls_import" config-url="{F:url('import')}">
-								批量导入
+							<!-- <a class="btn btn-primary btn-files-none" config-name="xls_import" config-url="{F:url('import')}">
+								导入.xls
 							</a>
-							<input type="file" style="display:none;" name="xls_import" multiple="multiple">	
-						
+							<input type="file" style="display:none;" name="xls_import" multiple="multiple">	 -->
+							
+							
+							<a class="btn btn-primary btn-files-none" config-name="import_model" config-url="{F:url('import')}">
+								导入模型
+							</a>
+							<input type="file" style="display:none;" name="import_model" multiple="multiple">	
+
 
 							{if in_array('en',$this->lg)}
-								<a class="btn btn-primary btn-trans" config-href="{F:url('edit')}" data-parentid="{$parentid}" config-tips="该操作会覆盖原字段信息,请谨慎操作!">生成英文</a>
+								<a class="btn btn-primary btn-ajax" dh-async="true" dh-url="{F:url('translation')}" data-parentid="{$parentid}" data-to="en" dh-confim="该操作会覆盖原字段信息,请谨慎操作!">生成英文</a>
 							{/if}
-
+							
 							{if in_array('jp',$this->lg)}
-								<a class="btn btn-primary btn-trans" config-href="{F:url('edit')}" data-parentid="{$parentid}" config-tips="该操作会覆盖原字段信息,请谨慎操作!">生成日文</a>
+								<a class="btn btn-primary btn-ajax" dh-async="true" dh-url="{F:url('translation')}" data-parentid="{$parentid}" data-to="jp" dh-confim="该操作会覆盖原字段信息,请谨慎操作!">生成日文</a>
 							{/if}
 						</div>
 					</div>
@@ -52,21 +58,48 @@
 										<tr>
 											<th style="width:75px;">ID</th>
 											<th>标题</th>
-											<th style="width:120px;">状态</th>
-											<th style="width:180px; text-align:center;">编辑/操作</th>
+											
+											{if in_array('en',$this->lg)}
+											<th>英文标题</th>
+											{/if}
+
+											{if in_array('jp',$this->lg)}
+											<th>日文标题</th>
+											{/if}
+
+											<th>别名</th>
+											<th style="width:120px;text-align: center;">状态</th>
+											<th style="width:250px; text-align:center;">编辑/操作</th>
 										</tr>
 									</thead>
 									<tbody>
 										{loop $list $key $value}
 									 	<tr v-for="list in list">
 											<td>{$value['id']}</td>
-											<td>{$value['name']}</td>
-											<td>{$value['is_show']}</td>
+											<td><input value="{$value['name']}" class="form-control w160 change-ajax" data-id="{$value['id']}" name="name" data-field="name" dh-method="POST" dh-url="{F:url('changeData')}" dh-true-reload="false"></input></td>
+											
+											{if in_array('en',$this->lg)}
+												<td><input value="{$value['name_en']}" class="form-control w160 change-ajax" data-id="{$value['id']}" name="name_en" data-field="name_en" dh-method="POST" dh-url="{F:url('changeData')}" dh-true-reload="false"></input></td>
+											{/if}
+
+											{if in_array('jp',$this->lg)}
+												<td><input value="{$value['name_jp']}" class="form-control w160 change-ajax" data-id="{$value['id']}" name="name_jp" data-field="name_jp" dh-method="POST" dh-url="{F:url('changeData')}" dh-true-reload="false"></input></td>
+											{/if}
+
+											<td><input value="{$value['bname']}" class="form-control w160 change-ajax"  data-id="{$value['id']}" name="bname" data-field="bname" dh-method="POST" dh-url="{F:url('changeData')}" dh-true-reload="false"></input></td>
+
+											<td align='center'>
+												<a class="btn-ajax" dh-url="{F:url('changeShow')}" dh-method="post" data-id="{$value['id']}" style="color: {if $value['is_show']}green{else}red{/if}">
+													{$value['is_show_copy']}
+												</a>
+											</td>
+
 											<td align='center'>
 												<a config-href="{F:url('edit',array('parentid'=>$value['id']))}"  config-height="500px" config-width="60%"  config-title="编辑分类"  class="btn-open">添加子类</a>
 												<a href="{F:url('lists',array('id'=>$value['id']))}">查看子类</a>
 												<a config-href="{F:url('edit',array('id'=>$value['id']))}"  config-height="500px" config-width="60%"  config-title="编辑分类"  class="btn-open">编辑</a>
 												<a config-href="{F:url('del')}" config-tips="确定删除【{$value['name']}】分类?" data-id="{$value['id']}" class="btn-ajax-post">删除</a>
+												<a config-tooltip="{$value['name']}">导出模型</a>
 											</td>
 										</tr>
 										{/loop}
